infra/k8s/users-service/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-v2
  namespace: memoire-app
  labels:
    app: users-service
    version: v2
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: users-service
      version: v2
  template:
    metadata:
      labels:
        app: users-service
        version: v2
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: users-service
          image: ghcr.io/yvescape/users-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
