infra/k8s/users-service/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service-v2
  namespace: memoire-app
  labels:
    app: users-service
    version: v2
spec:
  selector:
    app: users-service
    version: v2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
