infra/k8s/users-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: memoire-app
  labels:
    app: users-service
spec:
  selector:
    app: users-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
